--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "final-form": "^4.15.0",
     "final-form-focus": "^1.1.2",
     "graphql-request": "^1.8.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -35,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "moment": "^2.24.0"
   }
 }
