--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "final-form-focus": "^1.1.2",
     "graphql-request": "^1.8.2",
     "husky": "^3.0.0",
+    "jwt-decode": "^2.2.0",
     "lint-staged": "^9.1.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
